[package]
name = "global-mockable"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Utility for creating global mockable objects."
repository = "https://github.com/weirdev/global-mockable"
readme = "README.md"
keywords = ["mocking", "global", "utility", "singleton", "testing"]
categories = ["rust-patterns"]

[lib]
name = "global_mockable"
crate-type = ["rlib"]

[dependencies.tokio]
version = "1.41.1"
features = ["sync", "rt-multi-thread", "macros"]
